--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "Bank My Wallet"
 version = "1.0.1"
 description = "Digital Banking App"
-icon = "assets/Bank My Wallet.jpg"
+icon = "assets/icon.jpg"
 
 [tool.flet]
 app_name = "Bank-My-Wallet"
